2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b8

 Fix: Add missing Parameter for Gallery Remote in drawApplet()

 Fix: Valid HTML Output from dismissAndReload()

 Fix: Vali HTML Output and correct use of $url param in dismissAndLoad()

 Change: Skip . and .. in available_skins()

 Change: Nicer output from formatted_filesize()

 Fix: Avoid notices in unhtmlentities()

 Change: Made welcome_email() more comfortable.
  
2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b7

 * Fix: Javascript bugs
 
2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b6

 * Update: Gallery 1.5.8 works with phpBB2 up to 2.0.22

 * Fix: HTML Fix in usermanagement.

 * Change: Added a target to links to printservices.

 * Fix: Show 'comment' statistics link only when comments are enabled.
        Also some HTML nicify.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b5

 * Change: Give better information when adding an item in case its a movie.

 * Change: Sometimes there a folder in the albums dir that are valid,
		   but Gallery sees them as invalid.
		   Was only 'CVS' in the past. Increased the list. ('svn' etc.)

 * Change: method printableName() returned '' in case the userobject
		   is empty or a pseudouser.
		   Change to return 'unknown user' when its a empty. Pseudousers are
		   handled normally.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b4

 * Update: XML_HTMLSax3 classes. Fixed also a license issue with debian.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b3

 * Update: Mail classes from Richard Heyes.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b2

 * Change: When a new user is added and the username is invalid,
		   the display was not sanitized for all cases.

 * Change: Better/more detailed information from the user integrity check.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b1

 * Changes:
			Lots of code style
			use of gTranslate()
			Some wording changes
			Little HTML fixes, etc.

			No real code change, so this is more "breakpoint" commit.
